k8s/schedule-service/schedule-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule-app
  template:
    metadata:
      labels:
        app: schedule-app
    spec:
      containers:
      - name: schedule-service
        # IDE a lokális docker image-ed nevét kell írni. 
        image: flvvgiprojekt-schedule-service:latest
        imagePullPolicy: Never 
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-app-service 
spec:
  type: ClusterIP # Egyelőre csak belső hálózaton érhető el
  ports:
  - port: 5003
    targetPort: 5003
  selector:
    app: schedule-app
