k8s/schedule-service/schedule-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule-db
  template:
    metadata:
      labels:
        app: schedule-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        volumeMounts:
        - name: schedule-db-storage
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
      volumes:
      - name: schedule-db-storage
        persistentVolumeClaim:
          claimName: schedule-db-pvc  
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-db-service
spec:
  ports:
  - port: 3306
  selector:
    app: schedule-db
