k8s/schedule-service/schedule-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schedule-ingress
  annotations:     
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:                               
    service:
      name: schedule-app-service
      port:
        number: 5003
  rules:
  - http:
      paths:
      - path: /api/schedules
        pathType: Prefix
        backend:
          service:
            name: schedule-app-service
            port:
              number: 5003
